# Jira-Hooks-for-Bitbucket-Git-Hooks

./: .gitignore  LICENSE  README.md  commit-check.env.example  dev_readme.md  i18n.pyi  pyproject.toml  requirements.txt
hooks/: commit-msg  pre-push
jhfb_hooks/: __init__.py  client.py  config.py  config.pyi  git.py  i18n.py  output_level.py  payload.py  payload.pyi  printer_constants.py  result.py  result_printer.py  runner.py  severity_filter.py  signer.py
jhfb_hooks/locales/: de-DE.json  en-US.json
test/: run_check_commit.py  run_check_push.py  test_printer.py
test/test-data/: commit-without-jira-ticket.json  dependabot-dependency-update.json  feature-two-commits.json  hotfix-branch.json  i18n-feature-branch.json  long-commit-message.json  many-commits-develop.json  merge-commit.json  mixed-authors.json  mixed-valid-invalid-issues-one-commit.json  mixed-valid-invalid-issues.json  multiple-commits-feature-branch.json  release-branch.json  revert-commit.json  short-commit-message.json  single-commit-main.json  single-commit-no-branch.json  wip-commit.json
